--- a/src/com/board/properties/Command.properties
+++ b/src/com/board/properties/Command.properties
@@ -3,3 +3,4 @@
 /insert.do=com.board.action.InsertAction
 /delete.do=com.board.action.DeleteAction
 /count.do=com.board.action.CountAction
+/download.do=com.board.action.DownloadAction
