--- a/src/com/board/properties/Command.properties
+++ b/src/com/board/properties/Command.properties
@@ -4,3 +4,4 @@
 /delete.do=com.board.action.DeleteAction
 /count.do=com.board.action.CountAction
 /download.do=com.board.action.DownloadAction
+/ajaxList.do=com.board.action.AjaxListAction
